--- a/FakeNewsDetection.ipynb
+++ b/FakeNewsDetection.ipynb
@@ -116,7 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "news_df=pd.read_csv('fake-news/train.csv')"
+    "news_df=pd.read_csv('fake-news/train.csv')\n",
+    "#123"
    ]
   },
   {
